# WaterGrid

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
examples/: __init__.py  generate_test_data.py  simple_example.py  visualize_results.py
src/: __init__.py  calculations.py  cluster.py  config.py  data_io.py  resampling.py  utils.py
src/calc/: day_length.py  evapotranspiration.py
src/core/: __init__.py  base.py  distance.py  landuse.py  precipitation.py  temperature.py  watershed.py  wind.py
src/correction/: __init__.py  precipitation.py  utils.py
src/validation/: __init__.py  validator.py  watersheds.py
tests/: __init__.py  get_bounds.py  test_utils.py
